--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+main{
+  min-height:calc(100vh - 168px);
+}
+.site-footer{
+  height:112px;
+}
