--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,6 +1,7 @@
-// My Bootstrap configuration
-@import '_custom_bootstrap';
-// @import '_variables';
-
 // Bootstrap library
 @import '~bootstrap/scss/bootstrap.scss';
+
+// My Bootstrap configuration
+@import '_custom_bootstrap';
+
+// @import '_custom_bootstrap';
