--- a/src/styles/_custom_bootstrap.scss
+++ b/src/styles/_custom_bootstrap.scss
@@ -12,17 +12,30 @@
 // @import "_navbar";
 // @import "_card";
 
-
+body {
+  $nav-height: calc(#{$nav-link-height} + #{$navbar-padding-y} * 2);
+  padding-top: $nav-height;
+}
 input {
   width: 100%;
   min-width: 100%;
 }
-footer, section {
-  padding-top:1.5rem;
-  padding-bottom:1.5rem;
+section {
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+}
+footer {
+  padding: $navbar-padding-y 0;
+}
+.site-footer{
+  $footer-height: calc(#{$nav-link-height} + #{$btn-padding-y-lg} * 2 + #{$font-size-base} * #{$line-height-base + #{$paragraph-margin-bottom} * 2});
+  height: $footer-height;
+}
+main{
+  min-height:calc(100vh - $footer-height);
 }
 .btn-group{
-  margin-bottom: 1rem;
+  margin-bottom: $paragraph-margin-bottom;
 }
 .fullwidth {
   .container {
