--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -13,6 +13,12 @@
 
 @each $color, $value in $theme-colors {
   .bg-#{$color} {
-    background-color: $value;
+    background-color: $value !important;
+  }
+}
+
+@each $color, $value in $theme-colors {
+  .text-#{$color} {
+    color: $value !important;
   }
 }
