Fix index.scss file structure. Add styles to hero, portfolio and skills  section.

--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -13,7 +13,7 @@
 
 @each $color, $value in $theme-colors {
   .bg-#{$color} {
-    background-color: $value !important;
+    background-color: $value;
   }
 }
 
