--- a/src/styles/_custom_bootstrap.scss
+++ b/src/styles/_custom_bootstrap.scss
@@ -1,5 +1,6 @@
 // Configuration
 @import '_variables';
+
 @import '_mixins';
 
 // Layout & components
@@ -13,8 +14,11 @@
 // @import "_card";
 
 body {
-  $nav-height: calc(#{$nav-link-height} + #{$navbar-padding-y} * 2);
+  background-color: lighten(theme-color('light'),.25%);
   padding-top: $nav-height;
+}
+main{
+  min-height:calc(100vh - $footer-height);
 }
 input {
   width: 100%;
@@ -25,14 +29,10 @@ section {
   padding-bottom: 1.5rem;
 }
 footer {
-  padding: $navbar-padding-y 0;
+  padding: $navbar-padding-y*2 0;
 }
 .site-footer{
-  $footer-height: calc(#{$nav-link-height} + #{$btn-padding-y-lg} * 2 + #{$font-size-base} * #{$line-height-base + #{$paragraph-margin-bottom} * 2});
   height: $footer-height;
-}
-main{
-  min-height:calc(100vh - $footer-height);
 }
 .btn-group{
   margin-bottom: $paragraph-margin-bottom;
@@ -43,11 +43,15 @@ main{
     padding-bottom: 1.5em;
   }
 }
+.jumbotron {
+  padding-bottom:4rem;
+  background: lighten(theme-color('primary'),29%) none repeat scroll 0 0;
+}
 .expertise-area {
-  background: #fcfcfc none repeat scroll 0 0;
+  background: lighten(theme-color('primary'),30%) none repeat scroll 0 0;
 
   &:nth-child(odd) {
-    background: #fafafa none repeat scroll 0 0;
+    background: lighten(theme-color('primary'),29%) none repeat scroll 0 0;
   }
 }
 #portfolio {
@@ -55,9 +59,16 @@ main{
   flex-direction: column;
   align-items: flex-start;
   flex-wrap: wrap;
+  padding: 0 1rem 1.5rem;
+  margin-top:-4rem;
 }
 .card {
   margin: 0 auto 2em;
+  // background-color: theme-color('light');
+  background-color: lighten(theme-color('light'),.25%);
+}
+.icon-link {
+  margin: 0 0.8rem;
 }
 .icon-list {
   list-style: none;
@@ -70,6 +81,14 @@ main{
 }
 .icon-img svg  {
   fill: #212529;
+}
+@media (min-width: 576px) {
+  .jumbotron {
+    padding-bottom:8rem;
+  }
+  #portfolio {
+    margin-top:-6rem;
+  }
 }
 @media screen and (min-width: 34em){
   .icon-list {
@@ -97,7 +116,6 @@ main{
 }
 @media screen and (min-width:720px){
   #portfolio {
-    padding: 0 1em;
     flex-direction: row;
     .project {
       margin-left: 1%;
