--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,43 +1,4 @@
-// $blue:    #007bff !default;
-// $indigo:  #6610f2 !default;
-// $purple:  #6f42c1 !default;
-// $pink:    #e83e8c !default;
-// $red:     #dc3545 !default;
-// $orange:  #fd7e14 !default;
-// $yellow:  #ffc107 !default;
-// $green:   #28a745 !default;
-// $teal:    #20c997 !default;
-// $cyan:    #17a2b8 !default;
-
-// $primary:       $blue !default;
-// $secondary:     $gray-600 !default;
-// $success:       $green !default;
-// $info:          $cyan !default;
-// $warning:       $yellow !default;
-// $danger:        $red !default;
-// $light:         $gray-100 !default;
-// $dark:          $gray-800 !default;
-// $theme-colors: (
-// primary: #7AA7E4,
-// secondary: #4fbddc,
-// success: #0a7c3a,
-// info: #2150a9,
-// warning: #fc9a5b,
-// danger: #98210c,
-// light: #f3f3f3,
-// dark: #1A1A1A,
-// accent:#fa904c
-// ) !default;
-$theme-colors: (
-primary: #7aa7e4,
-secondary: #4fbddc,
-success: #0a7c3a,
-info: #2150a9,
-warning: #fc9a5b,
-danger: #98210c,
-light: #f9f9f9,
-dark: #1a1a1a,
-accent:#fa904c
-);
-
 $text-color: theme-color('dark');
+
+$nav-height: calc(#{$nav-link-height} + #{$navbar-padding-y} * 2);
+$footer-height: calc(#{$nav-link-height} + #{$btn-padding-y-lg} * 2 + #{$font-size-base} * #{$line-height-base + #{$paragraph-margin-bottom} * 2});
