--- a/client/src/styles/_custom_bootstrap.scss
+++ b/client/src/styles/_custom_bootstrap.scss
@@ -17,6 +17,9 @@ body {
   background-color: lighten(theme-color('light'),.25%);
   padding-top: $nav-height;
 }
+h4, .h4 {
+  font-size: 1.25rem;
+}
 main{
   min-height:calc(100vh - $footer-height);
 }
@@ -30,6 +33,16 @@ section {
 }
 footer {
   padding: $navbar-padding-y*2 0;
+}
+.navbar-light .navbar-nav .nav-link,
+.navbar-light .navbar-brand {
+  color:darken(theme-color('primary'),30%);
+}
+.navbar-light .navbar-nav .nav-link:hover,
+.navbar-light .navbar-nav .nav-link:focus,
+.navbar-light .navbar-brand:hover,
+.navbar-light .navbar-brand:focus {
+  color:darken(theme-color('primary'),40%);
 }
 .site-footer{
   height: $footer-height;
@@ -64,7 +77,6 @@ footer {
 }
 .card {
   margin: 0 auto 2em;
-  // background-color: theme-color('light');
   background-color: lighten(theme-color('light'),.25%);
 }
 .icon-link {
@@ -78,9 +90,16 @@ footer {
 }
 .icon {
   font-size: 400%;
+  margin-bottom:.5rem;
 }
 .icon-img svg  {
   fill: #212529;
+}
+.svg-inline--fa {
+  .card &,
+  .main-action & {
+    margin-right:.5rem;
+  }
 }
 @media (min-width: 576px) {
   .jumbotron {
@@ -90,7 +109,7 @@ footer {
     margin-top:-6rem;
   }
 }
-@media screen and (min-width: 34em){
+@media screen and (min-width: 320px){
   .icon-list {
     display: flex;
     flex-direction: row;
@@ -112,6 +131,9 @@ footer {
         margin-right: 0;
       }
     }
+  }
+  .other-ctas .svg-inline--fa {
+    margin-right:.5rem;
   }
 }
 @media screen and (min-width:720px){
