--- a/client/src/styles/_custom_bootstrap.scss
+++ b/client/src/styles/_custom_bootstrap.scss
@@ -34,15 +34,21 @@ section {
 footer {
   padding: $navbar-padding-y*2 0;
 }
-.navbar-light .navbar-nav .nav-link,
-.navbar-light .navbar-brand {
+a {
   color:darken(theme-color('primary'),30%);
+  &.icon-link {
+    color:darken(theme-color('primary'),10%);
+  }
+  &:hover,
+  &:focus {
+    color:darken(theme-color('primary'),40%);
+  }
 }
-.navbar-light .navbar-nav .nav-link:hover,
-.navbar-light .navbar-nav .nav-link:focus,
-.navbar-light .navbar-brand:hover,
-.navbar-light .navbar-brand:focus {
-  color:darken(theme-color('primary'),40%);
+.icon-link {
+  &:hover,
+  &:focus{
+    color:darken(theme-color('primary'),20%);
+  }
 }
 .site-footer{
   height: $footer-height;
@@ -90,10 +96,13 @@ footer {
 }
 .icon {
   font-size: 400%;
+  height: 4rem;
   margin-bottom:.5rem;
 }
-.icon-img svg  {
-  fill: #212529;
+.icon-img {
+  height: 4rem;
+  max-width: 80px;
+  margin-bottom:.5rem;
 }
 .svg-inline--fa {
   .card &,
@@ -114,7 +123,6 @@ footer {
     display: flex;
     flex-direction: row;
     align-content: center;
-    align-items: baseline;
     flex-wrap: wrap;
     justify-content: center;
 
