--- a/client/src/styles/_custom_bootstrap.scss
+++ b/client/src/styles/_custom_bootstrap.scss
@@ -21,7 +21,7 @@ h4, .h4 {
   font-size: 1.25rem;
 }
 main{
-  min-height:calc(100vh - $footer-height);
+  min-height:calc( 100vh - #{$footer-height} - #{$nav-height} );
 }
 input {
   width: 100%;
@@ -33,6 +33,7 @@ section {
 }
 footer {
   padding: $navbar-padding-y*2 0;
+  height: $footer-height;
 }
 a {
   color:darken(theme-color('primary'),30%);
@@ -85,22 +86,21 @@ a {
   margin: 0 auto 2em;
   background-color: lighten(theme-color('light'),.25%);
 }
-.icon-link {
-  margin: 0 0.8rem;
-}
 .icon-list {
   list-style: none;
   overflow: hidden;
   margin: 0;
   padding: 0;
+  .icon {
+    margin-bottom:.5rem;
+  }
 }
 .icon {
   font-size: 400%;
-  height: 4rem;
-  margin-bottom:.5rem;
+  height: $icon-height;
 }
 .icon-img {
-  height: 4rem;
+  height: $icon-height;
   max-width: 80px;
   margin-bottom:.5rem;
 }
@@ -108,6 +108,12 @@ a {
   .card &,
   .main-action & {
     margin-right:.5rem;
+  }
+}
+.icon-link {
+  margin: 0 0.8rem;
+  .icon {
+    margin-bottom:$paragraph-margin-bottom;
   }
 }
 @media (min-width: 576px) {
@@ -140,9 +146,11 @@ a {
       }
     }
   }
-  .other-ctas .svg-inline--fa {
+  .other-ctas {
+    .svg-inline--fa {
     margin-right:.5rem;
   }
+}
 }
 @media screen and (min-width:720px){
   #portfolio {
