--- a/client/src/styles/_variables.scss
+++ b/client/src/styles/_variables.scss
@@ -1,4 +1,5 @@
 $text-color: theme-color('dark');
-
-$nav-height: calc(#{$nav-link-height} + #{$navbar-padding-y} * 2);
-$footer-height: calc(#{$nav-link-height} + #{$btn-padding-y-lg} * 2 + #{$font-size-base} * #{$line-height-base + #{$paragraph-margin-bottom} * 2});
+$icon-height: 4rem;
+$nav-height: calc( #{$nav-link-height} + #{$navbar-padding-y} * 2 );
+$footer-height: calc(#{$navbar-padding-y} * 2 + #{$icon-height} + #{$font-size-base} * #{$line-height-base + #{$paragraph-margin-bottom} * 2});
+// $footer-height: calc( #{$icon-height} + #{$navbar-padding-y}*2 );
