--- a/client/src/styles/_custom_bootstrap.scss
+++ b/client/src/styles/_custom_bootstrap.scss
@@ -51,6 +51,10 @@ a {
     color:darken(theme-color('primary'),20%);
   }
 }
+.main-action,
+.other-ctas {
+  margin-bottom: $paragraph-margin-bottom;
+}
 .site-footer{
   height: $footer-height;
 }
